adding conditional display of forms

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Yatzee</h1>
+    <h1>Yahtzee</h1>
     <div class="dice">
         <img src="static/img/dice.png">
     </div>
