--- a/app/static/style.css
+++ b/app/static/style.css
@@ -24,6 +24,14 @@ h2{
     line-height: 120px;
 }
 
+.back{
+    padding: 30px;
+    margin-bottom: -101px;
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+      filter: drop-shadow(0px 0px 21px #22222250);
+    opacity: 0.4;
+}
+
 .actionbuttondiv{
     width: 85%;
     background-color: #FFFBFF;
@@ -48,7 +56,7 @@ h2{
 
 .dice{
     text-align: center;
-    margin-bottom: 67px;
+    margin-bottom: 66px;
     display: inline-table;
     width: 100%;
     -webkit-filter: drop-shadow(5px 5px 5px #222);
