--- a/app/templates/numberplayers.html
+++ b/app/templates/numberplayers.html
@@ -1,22 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="back">
+        <a href="{{ url_for('index') }}">
+            <img src="/static/img/back.png">
+        </a>
+    </div>
+
     <h2>How many people are playing?</h2>
 
-
-    <a href="{{ url_for('nametheplayers') }}" class="actionbutton">
+    <a href="{{ url_for('nametheplayers', numberplayers=2) }}" class="actionbutton">
         <div class="actionbuttondiv">2 players</div>
     </a>
 
-    <a href="{{ url_for('nametheplayers') }}" class="actionbutton">
+    <a href="{{ url_for('nametheplayers', numberplayers=3) }}" class="actionbutton">
         <div class="actionbuttondiv">3 players</div>
     </a>
 
-    <a href="{{ url_for('nametheplayers') }}" class="actionbutton">
+    <a href="{{ url_for('nametheplayers', numberplayers=4) }}" class="actionbutton">
         <div class="actionbuttondiv">4 players</div>
     </a>
 
-    <a href="{{ url_for('nametheplayers') }}" class="actionbutton">
+    <a href="{{ url_for('nametheplayers', numberplayers=5) }}" class="actionbutton">
         <div class="actionbuttondiv">5 players</div>
     </a>
 
