--- a/app/static/style.css
+++ b/app/static/style.css
@@ -24,6 +24,39 @@ h2{
     line-height: 120px;
 }
 
+h3{ 
+    text-align: center;
+    font-size: 76px;
+    font-family: 'Lilita One', helvetica, arial;
+    color: #fff;
+    letter-spacing: -1px;
+    text-shadow: 5px 5px 5px #00000075;
+    line-height: 120px;
+    background: #00B2FF;
+    background: linear-gradient(180deg, #00B2FF, #005F7B);
+    height: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    top: 0;
+    position: absolute;
+    margin-top: -30px;
+    width: 100%;
+    z-index: 1;
+    margin-left: -9px;
+
+}
+
+h4{
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Lilita One', helvetica, arial;
+    color: #0080B0;
+    letter-spacing: -1px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+
+}
+
 .back{
     padding: 30px;
     margin-bottom: -101px;
@@ -92,9 +125,6 @@ h2{
     outline:none!important
 }
 
-
-
-
 .player-form-btn{
     width: 85%;
     background-color: #FFFBFF;
@@ -115,5 +145,74 @@ h2{
     letter-spacing: -5px;
     display: table;
     border-style: none;
+    outline:none!important
 
+
+}
+
+.warningsign{
+    text-align: center;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: -40px;
+}
+
+.warningsign img{
+    width: 300px;
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+      filter: drop-shadow(0px 0px 21px #22222250);
+}
+
+.score-table{
+    width: 100%;
+    overflow: hidden;
+}
+
+.break{
+    display: block;
+    margin-bottom: 135px;
+}
+.header{
+    
+
+}
+
+.col1{
+    width: 50%;
+    float:left; 
+}
+
+.col2{
+    overflow: hidden;
+}
+
+.row-dark{
+    background-color: #00A2EF;
+    height: 138px;
+}
+
+.row-light{
+    background-color: #00B2FF;
+    height: 138px;
+
+}
+
+.score-type{
+    width: 30%;
+    float:left; 
+}
+
+.score-type img{
+    width: 120px;
+    margin: 11px 0px 0px 9px;
+}
+
+.inputscore{
+    width: 30%;
+    float:left;
+}
+
+.commentscore{
+    width: 30%;
+    float:left;
 }
