styling of the scorecard

--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -16,70 +16,70 @@
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>sum of ones</p>
 			</div>
 		</div>
 		<div class="row-light">
 			<div class="score-type">
-				<img src="/static/img/1.png">
+				<img src="/static/img/2.png">
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>sum of twos</p>
 			</div>
 		</div>
 		<div class="row-dark">
 			<div class="score-type">
-				<img src="/static/img/1.png">
+				<img src="/static/img/3.png">
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>sum of threes</p>
 			</div>
 		</div>
 		<div class="row-light">
 			<div class="score-type">
-				<img src="/static/img/1.png">
+				<img src="/static/img/4.png">
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>sum of fours</p>
 			</div>
 		</div>
 		<div class="row-dark">
 			<div class="score-type">
-				<img src="/static/img/1.png">
+				<img src="/static/img/5.png">
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text">
 			</div>
 			<div class="commentscore">
-				one
+				<p>sum of fives</p>
 			</div>
 		</div>
 		<div class="row-light">
 			<div class="score-type">
-				<img src="/static/img/1.png">
+				<img src="/static/img/6.png">
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>sum of sixes</p>
 			</div>
 		</div>
 		<div class="row-dark">
@@ -93,10 +93,10 @@
 				<img src="/static/img/1.png">
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>three of a kind</p>
 			</div>
 		</div>
 		<div class="row-light">
@@ -105,10 +105,10 @@
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>four of a kind</p>
 			</div>
 		</div>
 		<div class="row-dark">
@@ -117,10 +117,10 @@
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>full house</p>
 			</div>
 		</div>
 		<div class="row-light">
@@ -129,10 +129,10 @@
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>small straight</p>
 			</div>
 		</div>
 		<div class="row-dark">
@@ -141,10 +141,10 @@
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>large straight</p>
 			</div>
 		</div>
 		<div class="row-light">
@@ -153,13 +153,23 @@
 
 			</div>
 			<div class="inputscore">
-				how much
+				<input type="text" id="fname" name="fname">
 			</div>
 			<div class="commentscore">
-				one
+				<p>yatzee</p>
 			</div>
 		</div>
 		<div class="row-dark">
+			<div class="score-type">
+				<img src="/static/img/1.png">
+
+			</div>
+			<div class="inputscore">
+				<input type="text" id="fname" name="fname">
+			</div>
+			<div class="commentscore">
+				<p>chance</p>
+			</div>
 		</div>
 
 
