--- a/app/static/style.css
+++ b/app/static/style.css
@@ -205,6 +205,9 @@ h4{
 .score-type img{
     width: 120px;
     margin: 11px 0px 0px 9px;
+    border-radius: 38px;
+    background-color: #FE7C0B;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .inputscore{
@@ -212,7 +215,28 @@ h4{
     float:left;
 }
 
+.inputscore input{
+    width: 115px;
+    height: 115px;
+    margin-top: 11px;
+    border-radius: 10px;
+    outline: none !important;
+    border-style: none;
+    margin-left: 3px;
+    box-shadow: 2px -4px 117px -59px rgba(0,0,0,0.25) inset;
+    -webkit-box-shadow: 2px -4px 117px -59px rgba(0,0,0,0.25) inset;
+    -moz-box-shadow: 2px -4px 117px -59px rgba(0,0,0,0.25) inset;
+}
+
 .commentscore{
     width: 30%;
     float:left;
+}
+
+.commentscore p{
+    text-align: center;
+    font-size: 31px;
+    font-family: 'Lilita One', helvetica, arial;
+    color: #FFF;
+    align-items: center;
 }
