finished the rolling game

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
         <div class="actionbuttondiv">New game</div>
     </a>
 
-    <a href="#" class="actionbutton">
+    <a href="{{ url_for('score') }}" class="actionbutton">
         <div class="actionbuttondiv">Continue game</div>
     </a>
 
