--- a/app/static/style.css
+++ b/app/static/style.css
@@ -69,6 +69,11 @@ h4{
     opacity: 0.4;
 }
 
+.actionbutton{
+    text-align: center;
+    display: block;
+}
+
 .actionbuttondiv{
     width: 85%;
     background-color: #FFFBFF;
@@ -83,11 +88,16 @@ h4{
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: -5px;
+    outline:none!important;
+    border: none;
 }
 
 .actionbuttondiv:hover, .actionbuttondiv:active, {
     background-color: #FE7C0B;
     color: #FFFBFF;
+    outline:none!important;
+    border: none;
+
 }
 
 
@@ -216,6 +226,10 @@ h4{
     float:left;
 }
 
+.inputscore ::placeholder{
+    color: #1e1e1e50;
+}
+
 .inputscore input{
     width: 115px;
     height: 115px;
@@ -282,4 +296,32 @@ h4{
     font-size: 31px;
     font-family: 'Lilita One', helvetica, arial;
     color: #FFFFFF80;
+}
+
+.actionbuttonpausediv{
+    width: 85%;
+    background-color: #FFFBFF;
+    color: #FE7C0B;
+    font-size: 70px;
+    text-align: center;
+    padding: 30px 0 17px 0;
+    font-family: 'Lilita One', helvetica, arial;
+    margin: 60px auto 0 auto;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 40px;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: -5px;
+}
+
+.actionbuttonpause{
+    opacity: 0.3;
+}
+
+.actionbuttonpause:hover{
+    opacity: 1;
+}
+
+.green p{
+    color: #6bd595  !important;
 }
