--- a/app/static/style.css
+++ b/app/static/style.css
@@ -9,6 +9,18 @@ a{
 
 input{ touch-action: none; }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 h1{ 
     text-align: center;
     font-size: 220px;
