--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -22,7 +22,7 @@
 				<img src="/static/img/1.png">
 			</div>
 			<div class="inputscore">
-				{{ form.ones(size=10, class_='commentscore') }}
+				{{ form.ones(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>sum of ones</p>
@@ -34,7 +34,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.twos(size=10, class_='commentscore') }}
+				{{ form.twos(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>sum of twos</p>
@@ -46,7 +46,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.threes(size=10, class_='commentscore') }}
+				{{ form.threes(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>sum of threes</p>
@@ -58,7 +58,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.fours(size=10, class_='commentscore') }}
+				{{ form.fours(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>sum of fours</p>
@@ -70,7 +70,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.fives(size=10, class_='commentscore') }}
+				{{ form.fives(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>sum of fives</p>
@@ -82,7 +82,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.sixes(size=10, class_='commentscore') }}
+				{{ form.sixes(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>sum of sixes</p>
@@ -117,7 +117,7 @@
 				<img src="/static/img/3x.png">
 			</div>
 			<div class="inputscore">
-				{{ form.threex(size=10, class_='commentscore') }}
+				{{ form.threex(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>three of a kind</p>
@@ -129,7 +129,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.fourx(size=10, class_='commentscore') }}
+				{{ form.fourx(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore">
 				<p>four of a kind</p>
@@ -141,7 +141,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.fullhouse(size=10, class_='commentscore', placeholder='25') }}
+				{{ form.fullhouse(size=10, class_='commentscore', type="number", placeholder='25') }}
 			</div>
 			<div class="commentscore"><br>
 				<p>full house</p>
@@ -153,7 +153,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.small(size=10, class_='commentscore', placeholder='30') }}
+				{{ form.small(size=10, class_='commentscore', type="number", placeholder='30') }}
 			</div>
 			<div class="commentscore">
 				<p>small straight</p>
@@ -165,7 +165,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.large(size=10, class_='commentscore', placeholder='40') }}
+				{{ form.large(size=10, class_='commentscore', type="number", placeholder='40') }}
 			</div>
 			<div class="commentscore">
 				<p>large straight</p>
@@ -177,7 +177,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.yahtzee(size=10, class_='commentscore', placeholder='50') }}
+				{{ form.yahtzee(size=10, class_='commentscore', type="number", placeholder='50') }}
 			</div>
 			<div class="commentscore"><br>
 				<p>yahtzee</p>
@@ -189,7 +189,7 @@
 
 			</div>
 			<div class="inputscore">
-				{{ form.chance(size=10, class_='commentscore') }}
+				{{ form.chance(size=10, class_='commentscore', type="number") }}
 			</div>
 			<div class="commentscore"><br>
 				<p>chance</p>
