--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h1>Yahtzee</h1>
+    <p class="tag">score-card</p>
     <div class="dice">
         <img src="static/img/dice.png">
     </div>
