--- a/app/static/style.css
+++ b/app/static/style.css
@@ -30,6 +30,22 @@ h1{
     letter-spacing: -1px;
     paint-order: stroke fill;
     text-shadow: 15px 15px 50px rgb(0, 0, 0);
+    margin-bottom: 105px;
+}
+
+.tag{
+    float: right;
+    font-size: 80px;
+    font-family: 'Lilita One', helvetica, arial;
+    color: #fff;
+    letter-spacing: -1px;
+    background-color: #FE7C0B;
+    padding: 5px 30px;
+    margin: -166px 60px 0 0;
+    z-index: 99;
+    position: relative;
+    transform: rotate(6deg);
+    box-shadow: 5px 5px 5px #00000075;
 }
 
 h2{ 
